Floorplan update and add new camera

--- a/www/custom_ui/floorplan/ha-floorplan.html
+++ b/www/custom_ui/floorplan/ha-floorplan.html
@@ -216,6 +216,7 @@
           $(svg).width('100%');
           $(svg).css('position', this.instance.isPanel ? 'absolute' : 'relative');
           $(svg).css('cursor', 'default');
+          $(svg).css('background', '#332a29');
 
           Polymer.dom(this.instance.$.floorplan).node.appendChild(svg);
 
